Kinda satisfied with the impl now, tho remember to check the TODOS and probably soft reset when you come back

--- a/Content.Client/PDA/PdaProgramItem.xaml
+++ b/Content.Client/PDA/PdaProgramItem.xaml
@@ -1,10 +1,9 @@
 ﻿<pda:PdaProgramItem HorizontalExpand="True" MinHeight="60" Margin="4"
                     xmlns:pda="clr-namespace:Content.Client.PDA"
                     xmlns="https://spacestation14.io">
-    <PanelContainer Name="Panel"/>
     <BoxContainer Orientation="Horizontal" HorizontalExpand="True" VerticalExpand="True">
         <BoxContainer Orientation="Vertical" VerticalExpand="True" MinWidth="60">
-            <AnimatedTextureRect HorizontalAlignment="Center" VerticalAlignment="Center" VerticalExpand="True" Name="Icon" Access="Public"/>
+            <AnimatedTextureRect Name="Icon" HorizontalAlignment="Center" VerticalAlignment="Center" VerticalExpand="True" Access="Public"/>
         </BoxContainer>
         <BoxContainer Orientation="Vertical" VerticalExpand="True" HorizontalExpand="True">
             <Label Name="ProgramName" Access="Public" VerticalExpand="True"/>
